# mint

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  PR_DESCRIPTION.md  README.md  benchmark.py  data-processing-environment.yml  datatest.ipynb  environment.yml  install_mint.sh  mint_split.sh  pyproject.toml  setup.py  stringdb.py  train.links.txt  train.py  training.links.txt  uv.toml  val.links.txt
data/: protein_sequences.csv
docs/: developers.md
downstream/: baselines.py  embeddings_baselines.py  embeddings_esm_multimer.py  finetune_general.py  tasks.py
downstream/Antibody/flab/: finetune_flab.py
downstream/Antibody/in_silico/: README.md  finetune_in_silico.py  rcsb_pdb_2G75.fasta
downstream/CovidVariants/: README.md  calculate_metrics.ipynb  prepare_data.ipynb  train.py
downstream/GeneralPPI/: README.md  baselines.py  embeddings_baselines.py  embeddings_esm_multimer.py  embeddings_mint.py  embeddings_plm_multimer.py  finetune_general.py  tasks.py
downstream/GeneralPPI/SKEMPI_v2/: README.md  prepare_data.ipynb
downstream/GeneralPPI/human-ppi/: README.md  prepare_data.ipynb
downstream/GeneralPPI/mutational-ppi/: README.md  prepare_data.ipynb
downstream/GeneralPPI/pdb-bind/: README.md  prepare_data.ipynb
downstream/GeneralPPI/ppi/: README.md  prepare_data.ipynb
downstream/GeneralPPI/yeast-ppi/: README.md  prepare_data.ipynb
downstream/SKEMPI_v2/: prepare_data.ipynb
downstream/TCR-Epitope/tcr-interface/: README.md  teim_utils.py  train_res.py  train_seq.py
downstream/TCR-Epitope/tcr-piste/: README.md  train_mhc.py
downstream/TCR-Epitope/tdc/: README.md  prepare_data.ipynb  train_tchard.py
downstream/covid/: finetune_covid.py  test (7).ipynb  train (1).py  train.py
downstream/covid/.ipynb_checkpoints/: prepare_data-checkpoint.ipynb
downstream/flab/: finetune_flab.py
downstream/human-ppi/: prepare_data.ipynb  test-Copy1.ipynb
downstream/in_silico/: finetune_in_silico.py
downstream/mutants/: test (4).ipynb  train.py
downstream/mutants/.ipynb_checkpoints/: prepare_data-checkpoint.ipynb
downstream/oncoPPI/: README.md  prepare_data.ipynb  train.py
downstream/pdb-bind/: prepare_data.ipynb
downstream/ppi/: prepare_data.ipynb  test (2).ipynb
downstream/tcr-interface/: teim_utils.py  test (6).ipynb  train_res.py  train_seq.py
downstream/tcr-interface/.ipynb_checkpoints/: test (6)-checkpoint.ipynb
downstream/tcr-piste/: test (5).ipynb  train_mhc.py
downstream/tdc/: download_data.ipynb  train_tchard.py
downstream/tdc/.ipynb_checkpoints/: download_data-checkpoint.ipynb
downstream/yeast-ppi/: prepare_data.ipynb  test (1).ipynb
esm/: modules.py  multihead_attention.py
esm/model/: esm2.py
esm/utils/: dataset.py  parsing.py  wrapper.py
mint/helpers/: extract.py  predict.py
plm_multimer/: __init__.py  data.py  multihead_attention.py
plm_multimer/helpers/: extract.py
plm_multimer/model/: esm2.py
plm_multimer/utils/: dataset.py  logging.py  parsing.py  wrapper.py
scripts/: README.md  backward_pass_benchmark.py  cath_processor.py  contact_predictions.py  counting_pseudomultimers.py  data-processing-environment.yml  download_pdbs.sh  extract.py  forward_pass_benchmark.py  generate_pdb_ids.py  generate_pseudomultimer_dataset.py  listing_pseudomultimers.py  mint_split.py  process_data.py  processing_CATH.py  segment_counting.py
scripts/install/: environment.yml  setup_environment.sh
src/mint/: train.py  train_MLM.py  train_contact_predictions.py
src/mint/configs/: all_configs.yaml  esm2_t33_650M_UR50D.json  main.yaml
src/mint/data/: esm.py  mint.py
src/mint/helpers/: extract.py
src/mint/model/: dataset.py  esm.py  logging.py  mint.py  modules.py  multihead_attention.py  wrapper.py
src/mint/utils/: logging.py  parsing.py
tests/: test_cath_processor.py  test_counting_pseudomultimers.py  test_listing_pseudomultimers.py  test_mint.py  test_pdb_data_download.py
tests/data/: pdb_ids.txt  test_cath_domain_boundaries.txt
tests/data/raw/: pdb_features.json
tests/data/raw/cif_unzipped/000/: 101M.cif  103M.cif  105M.cif
tests/data/raw/cif_unzipped/001/: 104L.cif
